--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/maghoff/infix.git"
-  }
+  },
+  "keywords": [
+	"calculator",
+	"parser",
+	"expression",
+	"arithmetic"
+  ]
 }
